updata application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 ################# contextPath ############
-server.servlet.context-path=/app
+server.servlet.context-path=/tutorlink
 
 
 ############## DB conntection #############
