--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,16 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.15.2</version><!--$NO-MVN-MAN-VER$-->
+			<version>2.15.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.10.1</version><!--$NO-MVN-MAN-VER$--> <!-- 版本号根据您的需求进行调整 -->
+			<version>2.10.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
