--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.mvc.hiddenmethod.filter.enabled=true
 
 ### use MultipleFile to limit file size and request size
-spring.servlet.multipart.max-file-size=100KB
-spring.servlet.multipart.max-request-size=1MB
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+
 
 
