--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
     		<artifactId>commons-io</artifactId>
     		<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>MidtermAjaxMVC</groupId>
+			<artifactId>MidtermAjaxMVC</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
